<package>
	<name>alphanumeric_behavior_viewer</name>
	<version>1.0.0</version>
	<description>
    		alphanumeric behavior viewer package.
	</description>
	<author email="javier.mdeza@gmail.com">Javier Melero Deza</author>
	<maintainer email="javier.mdezal@gmail.com">Javier Melero Deza</maintainer>
  	<license>BSD-3</license>
	<url></url>

  	<buildtool_depend>catkin</buildtool_depend>


	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>robot_process</build_depend>
	<build_depend>behavior_execution_manager</build_depend>
	<build_depend>aerostack_msgs</build_depend>
	<build_depend>behavior_execution_manager_msgs</build_depend>


	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>robot_process</run_depend>
	<run_depend>behavior_execution_manager</run_depend>
	<run_depend>aerostack_msgs</run_depend>
	<run_depend>behavior_execution_manager_msgs</run_depend>


</package>
